feat(view/service/hook): summary, trade history, binance order

--- a/app/package.json
+++ b/app/package.json
@@ -72,6 +72,7 @@
     "@feathersjs/rest-client": "^5.0.24",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.26",
+    "@types/ws": "^8.5.10",
     "axios": "^1.6.7",
     "cross-env": "^7.0.3",
     "mocha": "^10.3.0",
